--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
                 </button>
                 <div class="about-stats-grid">
                     <div class="about-stat-card edu-hover">
-                        <div class="about-stat-main">3.1</div>
+                        <div class="about-stat-main">3.2</div>
                         <div class="about-stat-label">Current Semester</div>
                     </div>
                     <div class="about-stat-card edu-hover">
-                        <div class="about-stat-main">5+</div>
+                        <div class="about-stat-main">7+</div>
                         <div class="about-stat-label">Programming Languages</div>
                     </div>
                     <div class="about-stat-card edu-hover">
-                        <div class="about-stat-main">3+</div>
+                        <div class="about-stat-main">5+</div>
                         <div class="about-stat-label">Projects Completed</div>
                     </div>
                     <div class="about-stat-card edu-hover">
@@ -267,6 +267,13 @@
                     <p>Technologies: [Python]</p>
                     <a href="https://github.com/Sheikh-Mainul-Islam/ContactBook_CLI-Python.git" target="_blank" class="project-link">GitHub</a>
                     
+                </div>
+                <!-- New Project 4: Grihaloy -->
+                <div class="project-card edu-hover">
+                    <h3>Project 4: [Grihaloy]</h3>
+                    <p>Description: [A basic housing/flat management system project (update this text to match your project)]</p>
+                    <p>Technologies: [Update this with the real tech stack you used]</p>
+                    <a href="https://github.com/AniK-75/project_Grihaloy" target="_blank" class="project-link">GitHub</a>
                 </div>
             </div>
         </div>
